--- a/Blogs/Types-Of-Modules-And-Using-Them-Mobile.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them-Mobile.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     Sorry this webpage is under-development.
-    please return to the <a href="../Home-Mobile.html" style="text-decoration: none;">homepage</a>
+    please return to the <a href="../Home.html" style="text-decoration: none;">homepage</a>
 </body>
 </html>
