--- a/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter-Mobile.html
@@ -132,7 +132,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
+		<div class="menu-item"><a href="../Home">Home</a></div>
     <div class="menu-item"><a href="../Authors/ItsbaileyX">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -248,7 +248,7 @@ root.mainloop()
     <div style="margin-top:40px;"></div>
     <p>Created by <a href="../authors/ItsbaileyX">ItsbaileyX</a></p>
     <br><br><br>
-  <a class="button" href="../Home-Mobile">Back To Home</a>
+  <a class="button" href="../Home">Back To Home</a>
   <div style="margin-top:30px;"></div>
   <script>
   function copyCode(elementId) {
