--- a/Blogs/Python-Fundamentals-Mobile.html
+++ b/Blogs/Python-Fundamentals-Mobile.html
@@ -132,7 +132,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
+		<div class="menu-item"><a href="../Home">Home</a></div>
     <div class="menu-item"><a href="../Authors/Rangerrhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -323,7 +323,7 @@ print("Error: Division by zero!")
 <div style="margin-top:80px;"></div>
 <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
 <div style="margin-top:40px;"></div>
-<a class="button" href="../Home-Mobile">Back To Home</a>
+<a class="button" href="../Home">Back To Home</a>
 <div style="margin-top:40px;"></div>
   <script>
   function copyCode(elementId) {
