--- a/Blogs/Python-Introduction-Mobile.html
+++ b/Blogs/Python-Introduction-Mobile.html
@@ -47,7 +47,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
+		<div class="menu-item"><a href="../Home">Home</a></div>
     <div class="menu-item"><a href="../Authors/RangerRhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
@@ -103,7 +103,7 @@
     <br><br><br>
     <p>Created by <a href="../authors/RangerRhino23">RangerRhino23</a></p>
     <br><br>
-    <a class="button" href="../Home-Mobile">Back To Home</a>
+    <a class="button" href="../Home">Back To Home</a>
     <div style="margin-top: 30px;"></div>
 </body>
 </html>
