--- a/Blogs/Terminal-Games-With-Python-Mobile.html
+++ b/Blogs/Terminal-Games-With-Python-Mobile.html
@@ -110,7 +110,7 @@
 </head>
 <header>
   <div id="side-menu" style="height: 120px;">
-		<div class="menu-item"><a href="../Home-Mobile">Home</a></div>
+		<div class="menu-item"><a href="../Home">Home</a></div>
     <div class="menu-item"><a href="../Authors/RangerRhino23">Author</a></div>
 	</div>
 	<div id="menu-toggle" style="font-size: x-large">&#9776;</div>
