--- a/Blogs/Creating-Minecraft-In-Ursina.html
+++ b/Blogs/Creating-Minecraft-In-Ursina.html
@@ -11,10 +11,13 @@
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
     crossorigin="anonymous"></script>
-
+    <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
+    <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
+    <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
+    <link rel="stylesheet" type="text/css" href="CSS/mobile.css" media="screen and (max-width: 768px)" />
   </head>
   <header>
-<script src="BlogDeviceDeterminator.js"></script>
+<script src="BlogDeviceDeterminatorV2.js"></script>
   </header>
   <body>
     <br><br>
