--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -7,10 +7,13 @@
     <title>Creating Simulations With Python | PyBlog</title>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
      crossorigin="anonymous"></script>
-
+     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
+     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
+     <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
+     <link rel="stylesheet" type="text/css" href="CSS/mobile.css" media="screen and (max-width: 768px)" />
   </head>
   <header>
-    <script src="BlogDeviceDeterminator.js">
+    <script src="BlogDeviceDeterminatorV2.js">
     </script>
   </header>
   <body>
