--- a/Blogs/Installing-Python.html
+++ b/Blogs/Installing-Python.html
@@ -21,6 +21,7 @@
     <img src="Python-Introduction-Files\python_logo.webp" class="img-preset">
     <h1>Installing Python</h1>
     <h3>Difficulty: Beginner</h3>
+    <h3>Edited: 05/09/2023</h3>
 
     <h2>Introduction</h2>
     <p>
