--- a/Blogs/Making-Web-Games-With-Taptapir.html
+++ b/Blogs/Making-Web-Games-With-Taptapir.html
@@ -23,6 +23,7 @@
   <img src="home-page-images/Web-Games-Taptapir.webp" style="zoom:0.6;" class="img-preset" alt="Taptapir">
   <h1>Making Web Games with Tapair.</h1><br>
   <h3>Difficulty: Beginner</h3>
+  <h3>Edited: 06/11/2023</h3>
 
 
   <h2>Introduction</h2>
