--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -26,6 +26,8 @@
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Title</h1>
+    <h3>Difficulty: REPLACE</h3>
+    <h3>Edited: 00/00/0000</h3>
     <p>
       Paragraph
     </p>
