--- a/Blogs/Terminal-Games-With-Python.html
+++ b/Blogs/Terminal-Games-With-Python.html
@@ -23,6 +23,7 @@
     <br><br>
     <h1>Terminal Games With Python</h1>
     <h3>Difficulty: Beginner</h3>
+    <h3>Edited: 05/22/2023</h3>
 
     <h2>Introduction</h2>
     <p>
