--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -23,6 +23,7 @@
     <img src="home-page-images/Creating-Simulations.webp" style="width: 30%;" alt="Just an image" alt="Simulations">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Intermediate</h3>
+    <h3>Edited: 05/22/2023</h3>
 
     <h2>Introduction</h2>
     <p>
