--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -26,6 +26,9 @@
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>The history of python.</h1>
+    <h3>Difficulty: Beginner</h3>
+    <h3>Edited: 05/22/2023</h3>
+
     <p>
         Python, a high-level programming language known for its simplicity and 
         readability, was created by Guido van Rossum in the late 1980s. Guido, a 
