--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -26,6 +26,7 @@
     <img src="home-page-images\Sockets.webp" class="img-preset">
     <h1>Using Python and Sockets to Create a Chatroom.</h1>
     <h3>Difficulty: Intermediate</h3>
+    <h3>Edited: 05/22/2023</h3>
 
     <h2>Introduction</h2>
     <br><p>
