changed edit dates to universal format

--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -24,7 +24,7 @@
   <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset" alt="Flask">
   <h1>Creating web applications with python flask.</h1><br>
   <h3>Difficulty: Intermediate</h3>
-  <h3>Edited: 05/22/2023</h3>
+  <h3>Edited: May 22nd, 2023</h3>
 
 
   <h2>Introduction</h2>
