--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -43,7 +43,7 @@
     <br><br>
     <h1>A Deeper Exploration of Tkinter</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/06/2023</h3>
+    <h3>Edited: May 6th, 2023</h3>
 
 
     <h2>Quick recap.</h2>
