--- a/Blogs/Desktop-Applications-With-Tkinter.html
+++ b/Blogs/Desktop-Applications-With-Tkinter.html
@@ -21,7 +21,7 @@
     <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset">
     <h1>Desktop Apps with Tkinter!</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/05/2023</h3>
+    <h3>Edited: May 5th, 2023</h3>
 
 
     <h2>Introduction</h2>
