--- a/Blogs/How-To-Use-VSCode.html
+++ b/Blogs/How-To-Use-VSCode.html
@@ -31,7 +31,7 @@
     <img src="home-page-images/VS-Code.webp" class="img-preset">
     <h1>How To Use VS Code</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/22/2023</h3>
+    <h3>Edited: May 22nd, 2023</h3>
 
     <h2>Introduction</h2>
     <p>
