--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -54,7 +54,7 @@
     <img src="home-page-images/Machine-Learning.webp" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
     <h3>Difficulty: Advanced</h3>
-    <h3>Edited: 05/19/2023</h3>
+    <h3>Edited: May 19th, 2023</h3>
 
     <h2>Introduction</h2>
     <p>
