--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -58,7 +58,7 @@
     <br><br>
     <h1 class="paragraph">Chatbots: How to make them in python</h1>
     <h3>Difficulty: Intermediate</h3>
-    <h3>Edited: 05/10/2023</h3>
+    <h3>Edited: May 10th, 2023</h3>
 
 
     <h2>What is a chatbot?</h2>
