--- a/Blogs/Python-Introduction.html
+++ b/Blogs/Python-Introduction.html
@@ -22,7 +22,7 @@
     <img src="Python-Introduction-Files/python_logo.webp" class="img-preset">
     <h1 class="paragraph">Python: An Intorduction into the world of Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 04/27/2023</h3>
+    <h3>Edited: April 27th, 2023</h3>
 
     <h2>What is Python?</h2>
     <p>
