--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -23,7 +23,7 @@
     <img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">
     <h1>Introduction into Ursina!</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/09/2023</h3>
+    <h3>Edited: May 9th, 2023</h3>
 
     <p>
       If you're looking for an easy-to-use and beginner-friendly game engine, Ursina might be just what you need. Ursina is a Python-based game engine that was created with simplicity 
