--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -26,7 +26,7 @@
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>An introduction to pyweek</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 06/05/2023</h3>
+    <h3>Edited: June 12th, 2023</h3>
     
     <p>
       First let's start off by explaining what pyweek is.<br>Pyweek
