--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -44,7 +44,7 @@
     <img src="home-page-images/Python-Fundamentals.webp" style="width: 30%;">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/22/2023</h3>
+    <h3>Edited: May 22nd, 2023</h3>
 
     <h2>Introduction</h2>
     <p>
