--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -25,7 +25,7 @@
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Installing and using modules in python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: 05/24/2023</h3>
+    <h3>Edited: May 24th, 2023</h3>
 
     <p>
       Grab some popcorn because this one is gonna be a long one!<br><br>Modules are a key part of python that keep it running. Most modules are
