--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -59,11 +59,29 @@
       <h3>Engines you can use.</h3>
       <p>
         There are a lot of engines you can use when developing a game for pyweek, some of the 
-        most popular are:<br>
+        most popular are:<br><br>
         &bullet; Pygame<br>
         &bull; Ursina<br>
-        &bull; Panda3D<br>
+        &bull; Panda3D<br><br>
+        And loads more <strong>Be careful when using different engines as they may not be supported.</strong>
+        But other than that you can create anything you want, thats in line with the rules.
       </p>
+      <h3>Side notes</h3><p>
+        Some side notes include<br><br>
+        - Making sure you plan your game out<br>
+        - Voting for a catergory<br>
+        - If you have assets before pyweek has started make sure to link them<br>
+        - Have fun<br>
+      </p>
+
+      <h3>In conclusion</h3>
+      <p>
+        Pyweek is one of the biggest python game jams out there hosted
+        by the offical maintainers of python and the offical python discord server.
+        Pyweek has been going on 17 and a half years (Thats 2005!) and continues to be held twice a
+        year to this day. Have fun programming!
+      </p>
+
     
 
     <br><br><br>
