--- a/Home.html
+++ b/Home.html
@@ -20,6 +20,7 @@
   <body>
     <script src="javascript/HomeDeviceDeterminator.js">
     </script>
+    <script src="javascript/search_result.js"></script>
     <br><br><br>
     <img src="HomeImages/icon.png" class="img-preset" alt="Icon image"/>
 
@@ -132,7 +133,37 @@
           Making Web Games With Taptapir
         </b></p>
       </div>
-    </div><br>
+      <div class="grid-item" onclick="window.location.href='Blogs/Introduction-To-Pyweek'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/pyweek.webp" class="blog-img" alt="Pyweek", style="width: 75%; height: 75%;">
+        <p><b>
+          Introduction to pyweek
+        </b></p>
+      </div>
+    </div>
+    <!--For when the previous container is full
+
+    <div class="grid-container" id="gridContainer4" style="display: none;">
+      <div class="grid-item" onclick="window.location.href='Blogs/Types-Of-Modules-And-Using-Them'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Modules.webp" class="blog-img" alt="Modules and using them">
+        <p><b>
+          Types of modules in python
+        </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/Deeper-Exploration-of-Tkinter'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Deeper-Exploration-Tkinter.webp" class="blog-img" alt="Deeper tkinter">
+        <p><b>
+          Deeper Exploration of Tkinter
+        </b></p>
+      </div>
+      <div class="grid-item" onclick="window.location.href='Blogs/Making-Web-Games-With-Taptapir'" style="cursor: pointer;">
+        <img src="Blogs/home-page-images/Web-Games-Taptapir.webp" class="blog-img" alt="Taptapir">
+        <p><b>
+          Making Web Games With Taptapir
+        </b></p>
+      </div>
+    </div>-->
+    <br>
+
     <p id="tableNumber" class="pageNumber">1/3</p><br>
     <button onclick="toggleElementsBack()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&lt;</button>
     <button onclick="toggleElements()" class="button" style="padding-left: 10%; padding-right: 10%; padding-top: 10px; padding-bottom: 10px; cursor: pointer;">&gt;</button>
@@ -169,6 +200,7 @@
       let grid1 = "true"
       let grid2 = "false"
       let grid3 = "false"
+      let grid4 = "false"
       function handleIntersection(entries, observer) {
         entries.forEach((entry) => {
           if (entry.isIntersecting) {
@@ -194,6 +226,7 @@
         var gridContainer = document.getElementById('gridContainer1');
         var gridContainer2 = document.getElementById('gridContainer2');
         var gridContainer3 = document.getElementById('gridContainer3');
+        var gridContainer4 = document.getElementById('gridContainer4')
         var textElement = document.getElementById("tableNumber");
   if (grid1 === "true") {
    gridContainer.style.display = 'none';
