more dang nabbit fixes

--- a/search.html
+++ b/search.html
@@ -75,7 +75,7 @@
   </div>
   <div id="mobile-header" class="mobile">
     <div id="side-menu" style="height: 120px;">
-      <div class="menu-item"><a href="">Home</a></div>
+      <div class="menu-item"><a href="../Home">Home</a></div>
       <div class="menu-item"><a href="Authors/">Authors</a></div>
     </div>
     <div id="menu-toggle" style="font-size: x-large">&#9776;</div>
