--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
     </script>
     <script src="javascript/search_result.js"></script>
     <br><br><br>
-    <img src="HomeImages/icon.png" class="img-preset" alt="Icon image"/>
+    <a href="#"><img src="HomeImages/icon.png" class="img-preset" alt="Icon image" style="cursor: pointer"/></a>
 
     <!-- About PyBlog -->
     <h2 id="about-pyblog">About PyBlog</h2>
