--- a/search.html
+++ b/search.html
@@ -88,7 +88,7 @@
         document.body.classList.toggle('overflow-hidden');
       });
     </script>
-    <a href=""><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png" alt="Icon"></a>
+    <a href="../Home"><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png" alt="Icon" style="cursor: pointer;"></a>
 <div id="search-menu" class><div class="search-item">
 <form action="search.html" method="GET" class="search-bar" >
   <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." required id="mobile-search-form">
