i hope this fixes the search bug fr fr ong ong

--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -44,8 +44,9 @@
         We will quickly cover the basics of these built-in modules:
         <br>&bullet; Turtle<br>
         &bullet; Json<br>
-        &bullet; Tkinter
+        &bullet; Tkinter</p>
         <h3>Turtle</h3>
+        <p>
         Using turtle is fairly simple, it is a module to draw shapes
         using a GUI, it comes with some really awesome functions like changing
         the size of the screen and or turtle, hiding the turtle and the main one, drawing.
