--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -35,7 +35,7 @@
     <h2>Setting Up Project Folder</h2>
     <p>
       The first thing when creating any Python project is creating a project folder. In this blog I am assuming you have already installed Python and have a decent
-      knowledge about Python. If you don't click <a href="Installing-Python">here</a> for a Python Installation guide and <a href="Python-Introduction.html">here</a> 
+      knowledge about Python. If you don't click <a href="Installing-Python">here</a> for a Python Installation guide and <a href="../Blogs/Python-Introduction">here</a> 
       for a Python Introduction. To create a project folder, navigate to the place you store all of your project files. Create a new folder and name it what ever you
       want. I would recommend naming it "Simulations" or something close to that. After you create your project folder, open that folder in your desired editor or IDE.
     </p>
