--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -48,7 +48,7 @@
 
     <h2>Quick recap.</h2>
     <p>
-        From what we saw in <a href="../Blogs/Desktop-Applications-With-Tkinter.html">this blog</a>
+        From what we saw in <a href="../Blogs/Desktop-Applications-With-Tkinter">this blog</a>
         you would've created a label, a button and a function for the button when clicked.<br>
         In this blog we go over so better functions for placement. 
     </p>
