--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -101,7 +101,7 @@ print(name)
     what tkinter is and does.<br><br>Tkinter is a GUI application that comes
     installed with python by default, with tkinter you can create various apps
     like calculators and equation machines which is very good for beginners of python.
-    You can view the other blogs <a href="../Blogs/Desktop-Applications-With-Tkinter.html" style="text-decoration: none; color: salmon">here</a>
+    You can view the other blogs <a href="../Blogs/Desktop-Applications-With-Tkinter" style="text-decoration: none; color: salmon">here</a>
   </p>
   <h2>Popular user built modules</h2>
     <p>
