--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -127,7 +127,7 @@ def remove_client(self, client_socket):
     <p>
       From what we can see creating an application with sockets can be quite difficult
       but allows you to create multiplayer games and software like reddit if you wanted.
-      You can see how to create the client script <a href="../Blogs/Using-Sockets-For-Networking-2.html">Here</a>.
+      You can see how to create the client script <a href="../Blogs/Using-Sockets-For-Networking-2">Here</a>.
         And now we have a script that can allow multiple clients to connect to the server and
         speak to one another. However this is limited by your localhost and if you wish for
         people outside your network you will need to port forward your IP. Anways, thank you for
