--- a/Home.html
+++ b/Home.html
@@ -28,7 +28,7 @@
     <h2 id="about-pyblog">About PyBlog</h2>
     <div>
       <p><b>
-        PyBlog is a Python Blog Website created by RangerRhino23 as a fun small programming project. There are many different stories and projects you can read about and create!<br> To get started, click on one of the
+        PyBlog is a Python Blog Website created by <a href="Authors/RangerRhino23">RangerRhino23</a> and <a href="Authors/ItsbaileyX">ItsBailey</a> as a fun small programming project. There are many different stories and projects you can read about and create!<br> To get started, click on one of the
         blogs below!
       </b></p>
       <br>
