--- a/Blogs/Creating-A-Website-With-Flask.html
+++ b/Blogs/Creating-A-Website-With-Flask.html
@@ -19,13 +19,17 @@
   </head>
 <script src="BlogDeviceDeterminatorV2.js">
 </script>
+<script>
+  // Add the date here and not in the html tag!
+  const date = ["05","22","2023"]
+  </script><script src="loading.js"></script>
   <br><br>
   <!--Optional image placement-->
   <img src="Flask-stuff/Flask.webp" style="zoom:0.6;" class="img-preset" alt="Flask">
   <h1>Creating web applications with python flask.</h1><br>
   <h3>Difficulty: Intermediate</h3>
-  <h3>Edited: May 22nd, 2023</h3>
-
+  <h3 id="Date">blank</h3>
+  <script src="date.js"></script>
 
   <h2>Introduction</h2>
   <p>
