--- a/Blogs/Creating-Minecraft-In-Ursina.html
+++ b/Blogs/Creating-Minecraft-In-Ursina.html
@@ -18,6 +18,10 @@
   </head>
   <header>
 <script src="BlogDeviceDeterminatorV2.js"></script>
+<script>
+  // Add the date here and not in the html tag!
+  const date = ["06","01","2023"]
+  </script><script src="loading.js"></script>
   </header>
   <body>
     <br><br>
@@ -25,8 +29,8 @@
     <img src="home-page-images\Minecraft-Ursina.webp" class="img-preset" alt="Image of ursina minecraft" style="height: 250px; width: 500px" alt="An image">
     <h1>Creating A Minecraft Clone In Ursina</h1>
     <h3>Difficulty: Intermediate</h3>
-    <h3>Edited: June 1st, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Creating games in Ursina is very simple and fun. While you can go creating simple 2D games like a Cookie Clicker or Platformer game, creating 3D Games are much
