--- a/Blogs/Deeper-Exploration-of-Tkinter.html
+++ b/Blogs/Deeper-Exploration-of-Tkinter.html
@@ -40,11 +40,15 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+      <script>
+        // Add the date here and not in the html tag!
+        const date = ["05","06","2023"]
+        </script><script src="loading.js"></script>
     <br><br>
     <h1>A Deeper Exploration of Tkinter</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 6th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
 
     <h2>Quick recap.</h2>
     <p>
