--- a/Blogs/How-To-Use-VSCode.html
+++ b/Blogs/How-To-Use-VSCode.html
@@ -27,12 +27,17 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["05","22","2023"]
+      </script>
+      <script src="loading.js"></script>
     <br><br>
     <img src="home-page-images/VS-Code.webp" class="img-preset">
     <h1>How To Use VS Code</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">Blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Visual Studio Code (VS Code) is a powerful and versatile code editor developed by Microsoft. 
