--- a/Blogs/Installing-Python.html
+++ b/Blogs/Installing-Python.html
@@ -17,12 +17,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+        <script>
+          // Add the date here and not in the html tag!
+          const date = ["05","09","2023"]
+          </script><script src="loading.js"></script>
     <br><br>
     <img src="Python-Introduction-Files\python_logo.webp" class="img-preset">
     <h1>Installing Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 9th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Python is a popular programming language that is used for a variety of tasks including 
