--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -19,12 +19,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+        <script>
+          // Add the date here and not in the html tag!
+          const date = ["05","09","2023"]
+          </script><script src="loading.js"></script>
     <br><br>
     <img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">
     <h1>Introduction into Ursina!</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 9th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <p>
       If you're looking for an easy-to-use and beginner-friendly game engine, Ursina might be just what you need. Ursina is a Python-based game engine that was created with simplicity 
       and ease of use in mind. It's designed to help game developers quickly create 2D and 3D games without the need for complex coding or technical knowledge.
