--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -21,13 +21,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+        <script>
+          // Add the date here and not in the html tag!
+          const date = ["06","12","2023"]
+          </script><script src="loading.js"></script>
     <br><br>
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>An introduction to pyweek</h1>
-    <h3>Difficulty: Beginner</h3>
-    <h3>Edited: June 12th, 2023</h3>
-    
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <p>
       First let's start off by explaining what pyweek is.<br>Pyweek
       is a bi-annual (twice a year) event that is held by the current
