--- a/Blogs/Machine-Learning-With-Python.html
+++ b/Blogs/Machine-Learning-With-Python.html
@@ -50,12 +50,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+      <script>
+        // Add the date here and not in the html tag!
+        const date = ["05","19","2023"]
+        </script><script src="loading.js"></script>
     <br><br>
     <img src="home-page-images/Machine-Learning.webp" style="width: 30%;">
     <h1>Machine Learning With Python</h1>
     <h3>Difficulty: Advanced</h3>
-    <h3>Edited: May 19th, 2023</h3>
-
+    <h3 id="Date">Blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Machine learning has become a powerful tool in various fields, from healthcare to finance, revolutionizing the way we extract insights and make 
