--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -55,11 +55,15 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+        <script>
+          // Add the date here and not in the html tag!
+          const date = ["05","10","2023"]
+          </script><script src="loading.js"></script>
     <br><br>
     <h1 class="paragraph">Chatbots: How to make them in python</h1>
     <h3>Difficulty: Intermediate</h3>
-    <h3>Edited: May 10th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
 
     <h2>What is a chatbot?</h2>
     <p>A chatbot is an artificial intelligence (AI) program designed to interact with users through conversation. It can simulate human-like conversations and provide automated responses based on predefined rules or machine learning algorithms.</p>
