--- a/Blogs/Python-Introduction.html
+++ b/Blogs/Python-Introduction.html
@@ -18,12 +18,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["04","27","2023"]
+      </script><script src="loading.js"></script>
     <br><br>
     <img src="Python-Introduction-Files/python_logo.webp" class="img-preset">
     <h1 class="paragraph">Python: An Intorduction into the world of Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: April 27th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>What is Python?</h2>
     <p>
       Python is a high-level, interpreted programming language that is popular for its readability and ease of use. It was first released in 1991 and has since become one of the
