--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -21,13 +21,17 @@
     </script>
   </header>
   <body>
-
+<script>
+// Add the date here and not in the html tag!
+const date = ["mm","dd","yyyy"]
+</script>
     <br><br>
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Title</h1>
     <h3>Difficulty: REPLACE</h3>
-    <h3>Edited: Month Day, Year</h3>
+    <h3 id="Date">blank</h3>
+<script src="date.js"></script>
     <p>
       Paragraph
     </p>
