--- a/Blogs/Terminal-Games-With-Python.html
+++ b/Blogs/Terminal-Games-With-Python.html
@@ -17,14 +17,17 @@
     </script>
   </header>
   <body>
-
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["05","22","2023"]
+      </script><script src="loading.js"></script>
     <br><br>
     <img src="home-page-images/Terminal-Games.webp" class="img-preset">
     <br><br>
     <h1>Terminal Games With Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       In the realm of programming, games have always been an exciting and engaging way to learn 
