--- a/Blogs/The-History-Of-Python.html
+++ b/Blogs/The-History-Of-Python.html
@@ -18,7 +18,11 @@
   </head>
   <header>
     <script src="BlogDeviceDeterminatorV2.js">
-      </script>  
+      </script><script src="loading.js"></script>
+          <script>
+            // Add the date here and not in the html tag!
+            const date = ["05","22","2023"]
+            </script>
   </header>
   <body>
 
@@ -27,8 +31,8 @@
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>The history of python.</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <p>
         Python, a high-level programming language known for its simplicity and 
         readability, was created by Guido van Rossum in the late 1980s. Guido, a 
