--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -20,13 +20,17 @@
   <script src="BlogDeviceDeterminatorV2.js"></script>
 </header>
   <body>
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["05","24","2023"]
+      </script><script src="loading.js"></script>
     <br><br>
     <!--Optional image placement-->
     <!--<img src="home-page-images\Introduction-Into-Ursina.webp" class="img-preset">-->
     <h1>Installing and using modules in python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 24th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <p>
       Grab some popcorn because this one is gonna be a long one!<br><br>Modules are a key part of python that keep it running. Most modules are
       created by the python comunnity which can range from making text a different
