--- a/Blogs/Creating-Simulations-With-Python.html
+++ b/Blogs/Creating-Simulations-With-Python.html
@@ -15,6 +15,10 @@
   <header>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+        <script>
+          // Add the date here and not in the html tag!
+          const date = ["05","22","2023"]
+          </script><script src="loading.js"></script>
   </header>
   <body>
 
@@ -23,8 +27,8 @@
     <img src="home-page-images/Creating-Simulations.webp" style="width: 30%;" alt="Just an image" alt="Simulations">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Intermediate</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Simulations play a crucial role in various fields, from physics and biology to finance and game development. Whether your're a beginner looking to dive into the
