--- a/Blogs/Desktop-Applications-With-Tkinter.html
+++ b/Blogs/Desktop-Applications-With-Tkinter.html
@@ -17,12 +17,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["05","05","2023"]
+      </script><script src="loading.js"></script>
     <br><br>
     <img src="home-page-images/Desktop-Tkinter.webp" class="img-preset">
     <h1>Desktop Apps with Tkinter!</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 5th, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
 
     <h2>Introduction</h2>
     <p>
