--- a/Blogs/Making-Web-Games-With-Taptapir.html
+++ b/Blogs/Making-Web-Games-With-Taptapir.html
@@ -14,7 +14,10 @@
 </head>
 <header>
   <script src="BlogDeviceDeterminatorV2.js">
-    </script>
+    </script>    <script>
+      // Add the date here and not in the html tag!
+      const date = ["06","11","2023"]
+      </script><script src="loading.js"></script>
   </header>
 <body>
 
@@ -23,8 +26,8 @@
   <img src="home-page-images/Web-Games-Taptapir.webp" style="zoom:0.6;" class="img-preset" alt="Taptapir">
   <h1>Making Web Games with Tapair.</h1><br>
   <h3>Difficulty: Beginner</h3>
-  <h3>Edited: June 11th, 2023</h3>
-
+  <h3 id="Date">blank</h3>
+  <script src="date.js"></script>
 
   <h2>Introduction</h2>
   <p>
