--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -15,8 +15,12 @@
   <header>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
-
-  </header>    <style>
+    <script>
+      // Add the date here and not in the html tag!
+      const date = ["05","22","2023"]
+      </script><script src="loading.js"></script>
+  </header>
+  <style>
       table {
         background-color: #909090;
         border-collapse: collapse;
@@ -44,8 +48,8 @@
     <img src="home-page-images/Python-Fundamentals.webp" style="width: 30%;">
     <h1>Creating Simulations With Python</h1>
     <h3>Difficulty: Beginner</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <p>
       Python is a powerful and versatile programming language that has gained immense popularity among developers. 
