--- a/Blogs/Using-Sockets-For-Networking.html
+++ b/Blogs/Using-Sockets-For-Networking.html
@@ -22,12 +22,16 @@
   <body>
     <script src="BlogDeviceDeterminatorV2.js">
     </script>
+  <script>
+    // Add the date here and not in the html tag!
+    const date = ["05","25","2023"]
+    </script><script src="loading.js"></script>
     <br><br>
     <img src="home-page-images\Sockets.webp" class="img-preset">
     <h1>Using Python and Sockets to Create a Chatroom.</h1>
     <h3>Difficulty: Intermediate</h3>
-    <h3>Edited: May 22nd, 2023</h3>
-
+    <h3 id="Date">blank</h3>
+    <script src="date.js"></script>
     <h2>Introduction</h2>
     <br><p>
       In this blog we will be covering how to make a chatroom using python and its
