--- a/Blogs/New-Blog-2.html
+++ b/Blogs/New-Blog-2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    This is a blog that hasnt been created yet...<br>
+    This is a blog that is a placeholder<br>
     please return to the <a href="../Home">homepage.</a>
 </body>
 </html>
