--- a/Blogs/Terminal-Games-With-Python.html
+++ b/Blogs/Terminal-Games-With-Python.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terminal Games With Python | PyBlog</title>
-    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-     crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
      <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
      <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
      <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
