--- a/Blogs/Types-Of-Modules-And-Using-Them.html
+++ b/Blogs/Types-Of-Modules-And-Using-Them.html
@@ -9,8 +9,7 @@
     <meta property="og:title" content="Types of modules">
     <meta property="og:description" content="Discussing python modules and how to use then and what they do in general.">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-    crossorigin="anonymous"></script>   
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>   
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
     <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
