--- a/Blogs/Introduction-Into-Ursina.html
+++ b/Blogs/Introduction-Into-Ursina.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desktop Apps with Tkinter | PyBlog</title>
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen" />
-    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-     crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
      <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
      <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
      <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
