--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to pyweek | PyBlog</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <meta property="og:title" content="What is pyweek?">
     <meta property="og:description" content="Pyblog where only the best python blogs are found">
