--- a/Blogs/Making-A-Chatbot-With-Python.html
+++ b/Blogs/Making-A-Chatbot-With-Python.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
     <title>Making a chatbot with python | PyBlog</title>
     <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
