--- a/Blogs/Python-Fundamentals.html
+++ b/Blogs/Python-Fundamentals.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
     <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
-    <link rel="stylesheet" type="text/css" href="CSS/mobile.css" media="screen and (max-width: 768px)" /><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-  crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="CSS/mobile.css" media="screen and (max-width: 768px)" /><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
   </head>
   <header>
     <script src="BlogDeviceDeterminatorV2.js">
