--- a/Blogs/Introduction-To-Pyweek.html
+++ b/Blogs/Introduction-To-Pyweek.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Intro to pyweek | PyBlog</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307" crossorigin="anonymous"></script>
+    <script async src="https://fundingchoicesmessages.google.com/i/pub-9119300254012063?ers=1" nonce="rX5RasSNKrkS18XZoTmQDA"></script><script nonce="rX5RasSNKrkS18XZoTmQDA">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
     <link rel="icon" type="image/x-icon" href="../HomeImages/icon_rounded.webp">
     <meta property="og:title" content="What is pyweek?">
     <meta property="og:description" content="Pyblog where only the best python blogs are found">
