fix to search.html and search feature

--- a/404.html
+++ b/404.html
@@ -101,7 +101,7 @@
     <li><a href="/Home" class="hover-underline-animation">Home</a></li>
     <li><a href="/About-Authors" class="hover-underline-animation">Authors</a></li>
     <li>
-      <form action="search.html" method="GET" class="search-bar">
+      <form action="Search" method="GET" class="search-bar">
         <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." value="" required>
         <button type="submit">Search</button>
       </form>
