--- a/search.html
+++ b/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="min-height: 100vh;">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -66,7 +66,7 @@
       <li><a href="Home" class="hover-underline-animation">Home</a></li>
       <li><a href="Authors/" class="hover-underline-animation">Authors</a></li>
       <li>
-        <form action="search.html" method="GET" class="search-bar">
+        <form action="Search" method="GET" class="search-bar">
           <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." value="" required>
           <button type="submit">Search</button>
         </form>
@@ -90,7 +90,7 @@
     </script>
     <a href="../Home"><img style="float: center; margin-right: 16px; margin-top: 12px;width:180px;height:40px; border-radius:10px;object-fit: cover" src="HomeImages/icon.png" alt="Icon" style="cursor: pointer;"></a>
 <div id="search-menu" class><div class="search-item">
-<form action="search.html" method="GET" class="search-bar" >
+<form action="Search" method="GET" class="search-bar" >
   <input type="text" name="query" placeholder="&#x1F50E;&#xFE0E; Search..." required id="mobile-search-form">
   <button type="submit">Search</button>
 </form></div></div>
