remove ads from non-publisher content

--- a/Blogs/Template.html
+++ b/Blogs/Template.html
@@ -9,8 +9,7 @@
     <meta property="og:title" content="A pyblog blog">
     <meta property="og:description" content="Only the best blogs can be found here">
     <meta property="og:image" content="https://pyblog.ddns.net/HomeImages/icon.png">
-    <!-- untag this when blog complete! <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4348852660214307"
-    crossorigin="anonymous"></script>-->
+    <!-- untag this when blog complete! <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9119300254012063" crossorigin="anonymous"></script>-->
     <link rel="stylesheet" type="text/css" href="../style.css" media="screen and (min-width: 769px)" />
     <link rel="stylesheet" type="text/css" href="../style-mobile.css" media="screen and (max-width: 768px)" />
     <link rel="stylesheet" type="text/css" href="CSS/desktop.css" media="screen and (min-width: 769px)" />
